@@ -104,6 +104,9 @@ FENCER
   - Personal Guide Kit M2 | Special
   - Personal Guide Kit M3 | Special
   - Focus Pointer | Special
+  - Personal Guide Beacon | Special
+  - Personal Guide Beacon M2 | Special
+  - Personal Guide Beacon M3 | Special
 
 AIR RAIDER
   - Napalm Plan A | Calling for Support
